Revert "thêm tabpane cho movie status"
This reverts commit f4562b0098fefe818c7223bd82f85d2c293de584.

--- a/Areas/User/Views/UserHome/UserProfile.cshtml
+++ b/Areas/User/Views/UserHome/UserProfile.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    Layout = "~/Areas/User/Views/Shared/_UserLayout.cshtml";
-}
-
-@model CinemaWeb.Areas.User.Controllers.UserHomeController
+﻿@model CinemaWeb.Areas.User.Controllers.UserHomeController
 
 @{
     CinemaWeb.Models.user currentUser = (CinemaWeb.Models.user)HttpContext.Current.Session["user"];
