--- a/Areas/User/Views/UserHome/Index.cshtml
+++ b/Areas/User/Views/UserHome/Index.cshtml
@@ -29,7 +29,7 @@
             if (movie.movie_status == true && count < 4)
             {
                 <div class="col-md-3 sub-movie-list">
-                    <img src="@movie.url_image" alt="" class="img-fluid img-movie rounded mx-auto d-block">
+                    <img src="@movie.url_image" alt="" class="img-fluid img-movie">
                     <button class="buy-ticket-btn btn">
                         <i class="ti-ticket"></i>
                         Mua vé
