--- a/Areas/User/assets/css/userstyle.css
+++ b/Areas/User/assets/css/userstyle.css
@@ -7,11 +7,12 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.buyticket-area {
+.header {
+    background-color: #fff;
 }
 
 .buyticket-btn {
-    font-size: 15px;
+    font-size: 20px;
     color: #fff;
     border: none;
 }
@@ -107,13 +108,19 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.movie-list a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+}
+
 .movie-list .col-md-3 {
     position: relative;
 }
 
 .img-movie {
-    margin-bottom: 10px;
-    border-radius: 8px;
+    padding-bottom: 10px;
+    transition: filter 0.3s ease;
 }
 
 .ti-ticket {
@@ -148,7 +155,8 @@
     }
 
 .search-icon {
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 500;
 }
 
 .search-btn {
@@ -159,31 +167,18 @@
     margin-left: 70px;
 }
 
+.login-area {
+    display: flex;
+}
+
 .user_name:hover {
     cursor: pointer;
     color: #f29538;
 }
 
-/* Login */
-.login-area {
-    display: flex;
-}
-
 .account-wrapper {
     position: relative;
 }
-
-.account-img {
-    width: 75px;
-    height: auto;
-    padding: 10px 20px;
-}
-
-/*.col-auto .icon {
-    width: 20px;
-    height: auto;
-    margin-right: 5px;
-}*/
 
 .account-list li:hover a {
     color: #F26B38;
@@ -209,6 +204,12 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.account-img {
+    width: 75px;
+    height: auto;
+    padding: 10px 20px;
+}
+
 .account-icon {
     padding-right: 10px;
 }
@@ -217,9 +218,10 @@
     display: block;
 }
 
-.g-star-img {
-    width: 100px;
+.col-auto .icon {
+    width: 20px;
     height: auto;
+    margin-right: 5px;
 }
 
 /* Slider */
@@ -240,7 +242,6 @@
 }
 
 /* Content */
-
 
 .stt-movie-list {
     display: inline-block;
@@ -270,6 +271,10 @@
             color: rgba(3, 78, 162, 1);
         }
 
+    /*.stt-movie-item a:active {
+    color: #F26B38;
+}*/
+
     .stt-movie-item:hover {
         cursor: pointer;
         color: rgba(3, 78, 162, 1);
@@ -277,6 +282,11 @@
 
 .movie-icon {
     color: rgba(3, 78, 162, 1);
+}
+
+.content {
+    margin-left: 4rem;
+    margin-right: 4rem;
 }
 
 .now-playing {
@@ -288,239 +298,3 @@ up-coming {
     margin-left: -3rem;
 }
 
-.content {
-    margin-left: 4rem;
-    margin-right: 4rem;
-}
-
-.movie-list a {
-    text-decoration: none;
-    color: #000;
-    font-weight: 500;
-}
-
-.container .col-md-5 {
-    background-color: gray;
-}
-
-.col-auto .icon {
-    width: 20px;
-    height: auto;
-    margin-right: 5px;
-}
-
-.rating {
-    margin-top: 60px;
-}
-
-.d {
-    margin-left: 125px;
-    color: #f29538;
-}
-
-.logo {
-    list-style: none;
-    margin-top: 20px;
-}
-
-.logo-item1 {
-    display: inline-block;
-    margin-right: 120px;
-}
-
-.logo-item2 {
-    display: inline-block;
-    margin-right: 120px;
-}
-
-.logo-item3 {
-    display: inline-block;
-}
-
-.money {
-    list-style: none;
-}
-
-.money-item1 {
-    display: inline-block;
-    margin-right: 70px;
-}
-
-.money-item2 {
-    display: inline-block;
-    margin-right: 40px;
-}
-
-.money-item3 {
-    display: inline-block;
-}
-
-.footer {
-    margin-top: 80px;
-}
-
-.list {
-    list-style: none;
-    padding-left: 0px;
-}
-
-.item {
-    margin-bottom: 25px;
-}
-
-    .item a {
-        text-decoration: none;
-        color: inherit;
-        font-size: small;
-        font-weight: 500;
-    }
-
-.list_fc {
-    display: flex;
-    list-style: none;
-    border-bottom: 1px solid gray;
-    padding-bottom: 5px;
-    padding-top: 5px;
-}
-
-.list_item {
-    display: inline-block;
-    margin-right: 70px;
-}
-
-    .list_item a {
-        text-decoration: none;
-        color: inherit;
-        font-weight: 500;
-    }
-
-.container .col-md-2 img {
-    max-width: 100px;
-    max-height: 90px;
-    display: block;
-}
-
-.container .row .col-md-5 {
-    background-color: #fff;
-}
-
-.container .row {
-    margin-bottom: 30px;
-}
-
-
-.container .col-md-7 .col-md-5 {
-    margin-top: 30px;
-    font-weight: 500;
-}
-
-.container .col-md-7 .col-md-3 {
-    margin-top: 20px;
-    font-size: small;
-    font-weight: 500;
-}
-
-.container .col-md-7 .col-md-2 {
-    margin-top: 30px;
-    font-size: small;
-    font-weight: bold;
-}
-
-    .container .col-md-7 .col-md-2 a {
-        text-decoration: none;
-        color: #F26B38;
-    }
-
-    .container .col-md-7 .col-md-2:hover {
-        cursor: pointer;
-    }
-
-.form-group {
-    margin-bottom: 20px;
-    font-weight: 500;
-    color: dimgray;
-}
-
-    .form-group .form {
-        margin-top: 10px;
-    }
-
-.update {
-    background-color: #F26B38;
-    color: #fff;
-    font-size: 12px;
-    padding: 10px 45px;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.modal-content .row1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.modal .row1 {
-    border-bottom: dashed 1px #000;
-    font-weight: 700;
-    font-size: 1.125rem;
-    font-style: normal;
-    margin-top: .75rem;
-}
-
-    .modal .row1 img {
-        width: 80px;
-        height: 100px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
-.modal-dialog {
-    max-width: 330px;
-    max-height: 600px;
-}
-
-.modal .row2 {
-    border-bottom: dashed 1px #000;
-    font-weight: 700;
-    font-size: .875rem;
-    font-style: normal;
-    margin-top: .75rem;
-    margin-left: 20px;
-}
-
-.modal .row3 {
-    border-bottom: dashed 1px #000;
-    font-weight: 700;
-    font-size: .875rem;
-    font-style: normal;
-    margin-top: .75rem;
-    margin-left: 20px;
-}
-
-.modal .row4 {
-    font-weight: 700;
-    font-size: .875rem;
-    font-style: normal;
-    margin-top: .75rem;
-    margin-left: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.row4 .col {
-    flex: 1;
-    text-align: center;
-}
-
-.modal .p {
-    font-weight: normal;
-}
