--- a/Areas/User/Views/Shared/_UserLayout.cshtml
+++ b/Areas/User/Views/Shared/_UserLayout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png">
     <title>Ohayou Cinema</title>
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Areas/User/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="~/Areas/User/assets/css/userstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -99,7 +99,7 @@
                                             </a>
                                         </li>
                                         <li class="list-group-item">
-                                            <a href="#">
+                                            <a href="">
                                                 <i class="fa-solid fa-list-ol account-icon"></i>
                                                 Lịch Sử
                                             </a>
@@ -183,9 +183,8 @@
     <div class="footer">
         @RenderSection("UserProfile", required: false)
     </div>
-    <script src="~/Areas/User/assets/js/userscripts.js"></script>
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-
+    @*<script src="~/Areas/User/assets/js/userscripts.js"></script>*@
+    <script src="~/Areas/User/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
