thêm trang mua vé (chưa truy vấn được database)

--- a/Areas/User/Views/Shared/_UserLayout.cshtml
+++ b/Areas/User/Views/Shared/_UserLayout.cshtml
@@ -19,9 +19,9 @@
                     <img src="~/assets/images/logo/cinema-logo.png" alt="Ohayou Cinema" class="img-fluid">
                 </div>
                 <div class="col-md-2 buyticket-area">
-                    <button type="button" class="buyticket-btn btn">
+                    <a href="/User/BookTicket/BookTicket" class="buyticket-btn btn">
                         <img src="~/assets/images/subimg/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
-                    </button>
+                    </a>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-gr-1 list-group list-group-horizontal">
